# Neuvisys

./: .gitignore  CMakeLists.txt  INSTALL.sh  MainTest.cpp  Neuvisys.cpp  README.md  neuvisys-dv.cbp
configs/: conf.json  config.json  config_0.json  config_1.json  config_2.json  config_3.json  config_4.json  config_4_big.json  config_4_mirror.json  config_5.json  config_6.json  config_7.json  config_network_0.json  config_neuron_0.json  parameters.json
configuration/: conf.json  gui.json
configuration/configs/: 0.json  save_0.json  save_1.json  save_2.json
data/coppelia-scenes/: Neuvisys_Orientation.ttt  Neuvisys_Tracking_2D.ttt  Neuvisys_Vergence.ttt
dv-modules/: EventAnalysis.cpp  EventAnalysis.py  EventLoader.cpp  Neuvisys.cpp
generate_network/: network_config.py  planner.py
libs/: CMakeLists.txt  version.h
libs/apps/: CMakeLists.txt
libs/apps/gui/: CMakeLists.txt
libs/apps/gui/src/: main.cpp
libs/apps/gui_simulation/: CMakeLists.txt
libs/apps/gui_simulation/src/: main.cpp
libs/apps/motor_control/: CMakeLists.txt
libs/apps/motor_control/src/: main.cpp
libs/apps/neuvisys/: CMakeLists.txt
libs/apps/neuvisys/src/: main.cpp
libs/apps/simulator/: CMakeLists.txt
libs/apps/simulator/src/: main.cpp
libs/camera/: CMakeLists.txt
libs/camera/include/camera/: EventCamera.hpp  Ynoise.hpp
libs/camera/src/: EventCamera.cpp  Ynoise.cpp
libs/gui/: CMakeLists.txt
libs/gui/include/gui/: Neuvisysgui.h  Neuvisysthread.h
libs/gui/src/: Neuvisysgui.cpp  Neuvisysthread.cpp
libs/gui_simulation/: CMakeLists.txt
libs/gui_simulation/include/gui_simulation/: NeuvisysguiSimulation.h  NeuvisysthreadSimulation.h
libs/gui_simulation/src/: NeuvisysguiSimulation.cpp  NeuvisysthreadSimulation.cpp  neuvisysguisimulation.ui
libs/motor_control/: CMakeLists.txt
libs/motor_control/include/motor_control/: BrushlessMotor.hpp  MotorRos.hpp
libs/motor_control/src/: BrushlessMotor.cpp  MotorRos.cpp
libs/network/: CMakeLists.txt
libs/network/include/network/: Config.hpp  Event.hpp  NetworkHandle.hpp  SpikingNetwork.hpp  SurroundSuppression.hpp  Util.hpp
libs/network/include/network/config/: Config.hpp  DefaultConfig.hpp
libs/network/include/network/neurons/: ComplexNeuron.hpp  MotorNeuron.hpp  Neuron.hpp  SimpleNeuron.hpp
libs/network/include/network/utils/: Types.hpp  Util.hpp  WeightMap.hpp  WeightMatrix.hpp
libs/network/src/: NetworkHandle.cpp  SpikingNetwork.cpp  SurroundSuppression.cpp  Util.cpp
libs/network/src/config/: Config.cpp  DefaultConfig.cpp
libs/network/src/neurons/: ComplexNeuron.cpp  MotorNeuron.cpp  Neuron.cpp  SimpleNeuron.cpp
libs/network/src/utils/: Util.cpp  WeightMap.cpp  WeightMatrix.cpp
libs/simulator/: CMakeLists.txt
libs/simulator/include/simulator/: FrameToEvents.hpp  Launcher.hpp  Motor.hpp  SimulationInterface.hpp
libs/simulator/src/: FrameToEvents.cpp  Launcher.cpp  Motor.cpp  SimulationInterface.cpp
src/: Config.cpp  Config.h  Config.hpp  DelayedSpikingNeuron.cpp  DelayedSpikingNeuron.hpp  Event.cpp  Event.hpp  Neuvisys.cpp  NeuvisysRos.cpp  OrientedSpikingNeuron.cpp  OrientedSpikingNeuron.hpp  SpikingNetwork.cpp  SpikingNetwork.hpp  SpikingNeuron.cpp  SpikingNeuron.hpp  Utils.cpp  Utils.hpp
src/Neurons/: DelayedSpikingNeuron.cpp  DelayedSpikingNeuron.hpp  DelayedSpikingNeuron2.cpp  DelayedSpikingNeuron2.hpp  OrientedSpikingNeuron.cpp  OrientedSpikingNeuron.hpp  SpikingNeuron.cpp  SpikingNeuron.hpp
src/camera/: CMakeLists.txt  EventCamera.cpp  EventCamera.hpp  Ynoise.cpp  Ynoise.hpp
src/coppelia-scenes/: Neuvisys.ttt  ball_3D_script.lua
src/dependencies/: json.hpp
src/dv-modules/: CMakeLists.txt  DavisHandle.cpp  DavisHandle.hpp  NeuvisysDV.cpp  Ynoise.cpp  Ynoise.hpp
src/gui/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  Gui.cpp  Neuvisysgui.cpp  Neuvisysgui.h  Neuvisysthread.cpp  Neuvisysthread.h  guiMain.cpp  main.cpp  neuvisysgui.cpp  neuvisysgui.h  neuvisysgui.ui  neuvisysthread.cpp  neuvisysthread.h
src/gui-simulation/: CMakeLists.txt  GuiSimulation.cpp  NeuvisysguiSimulation.cpp  NeuvisysguiSimulation.h  NeuvisysthreadSimulation.cpp  NeuvisysthreadSimulation.h
src/gui/gui-simulation/: CMakeLists.txt  NeuvisysthreadSimulation.cpp  NeuvisysthreadSimulation.h
src/modules/: Neuvisys-DV.cpp  Neuvisys.cpp  Neuvisys.hpp  NeuvisysDV.cpp  NeuvisysRos.cpp
src/motor-control/: BrushlessMotor.cpp  BrushlessMotor.hpp  CMakeLists.txt  MotorRos.cpp  MotorRos.hpp  StepMotorRos.cpp
src/motor-control/libserie/: CMakeLists.txt
src/network/: CMakeLists.txt  Config.cpp  Config.hpp  Event.hpp  NetworkHandle.cpp  NetworkHandle.hpp  SpikingNetwork.cpp  SpikingNetwork.hpp  SurroundSuppression.cpp  SurroundSuppression.hpp  Type.hpp  Util.cpp  Util.hpp  Utils.cpp  Utils.hpp
src/neurons/: ComplexNeuron.cpp  ComplexNeuron.hpp  DelayedSpikingNeuron.cpp  DelayedSpikingNeuron.hpp  DelayedSpikingNeuron2.cpp  DelayedSpikingNeuron2.hpp  Neuron.cpp  Neuron.hpp  OrientedNeuron.cpp  OrientedNeuron.hpp  OrientedSpikingNeuron.cpp  OrientedSpikingNeuron.hpp  PoolingNeuron.cpp  PoolingNeuron.hpp  SimpleNeuron.cpp  SimpleNeuron.hpp  SpatioTemporalNeuron.cpp  SpatioTemporalNeuron.hpp  SpikingNeuron.cpp  SpikingNeuron.hpp  TemporalNeuron.cpp  TemporalNeuron.hpp
src/resources/: DefaultConfig.cpp  DefaultConfig.hpp
src/robot-control/: CMakeLists.txt  FrameToEvents.cpp  FrameToEvents.hpp  Motor.cpp  Motor.hpp  Neuvisys.ttt  SimulationInterface.cpp  SimulationInterface.hpp  rosMain.cpp
src/ros/: CMakeLists.txt  FrameToEvents.cpp  FrameToEvents.hpp  Motor.cpp  Motor.hpp  Neuvisys.ttt  NeuvisysRos.cpp  SimulationInterface.cpp  SimulationInterface.hpp  rosMain.cpp
src/simulator/: CMakeLists.txt  FrameToEvents.cpp  FrameToEvents.hpp  Motor.cpp  Motor.hpp  SimulationInterface.cpp  SimulationInterface.hpp  mainSimulator.cpp
src/simulator/coppelia-scenes/: Neuvisys_Orientation.ttt  Neuvisys_Vergence_Objects.ttt
src/utils/: Type.hpp  Util.cpp  Util.hpp  WeightMap.cpp  WeightMap.hpp  (+2 more)
test/: CMakeLists.txt  NetworkHandleTest.cpp  NetworkHandleTest.hpp  SpikingNetworkTest.cpp  SpikingNetworkTest.hpp
tests/: MainTest.cpp
(+7125 files in other folders)
